Cleanup Java 9 and 10 new features